# rust-warp-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  add_answer.sh  build.rs  docker-compose.yml  get.sh  internalerror.sh  login.sh  post.sh  postanswer.sh  postass.sh  put.sh  questions.json  register.sh  setup.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
